--- a/public/style.css
+++ b/public/style.css
@@ -278,6 +278,10 @@ html:-ms-fullscreen {
 body {
   background-color: #f5f5f5 !important; }
 
+@font-face {
+  font-family: "FORTE";
+  src: url(fonts/_/stylesheets/forte.ttf) format("truetype"); }
+
 .custom-icon {
   width: 22px; }
 
@@ -568,7 +572,7 @@ body {
   outline: none !important;
   color: #fff;
   font-size: 20px;
-  font-family: "forte";
+  font-family: 'FORTE';
   text-decoration: none;
   border: 3px solid #fff !important;
   background: linear-gradient(to right, #f00, #f60);
