--- a/public/style.css
+++ b/public/style.css
@@ -276,19 +276,38 @@ html:-ms-fullscreen {
   z-index: 10; }
 
 .panel {
-  max-width: 500px;
-  min-height: 50px;
+  width: 50px;
+  min-height: 300px;
   background-color: #f8cd7d;
-  border-radius: 90px 90px 0px 0px;
-  -moz-border-radius: 90px 90px 0px 0px;
-  -webkit-border-radius: 90px 90px 0px 0px;
+  border-radius: 90px 0px 0px 90px;
+  -moz-border-radius: 90px 0px 0px 90px;
+  -webkit-border-radius: 90px 0px 0px 90px;
   border: 0px solid #000; }
 
 .moreVideos {
+  max-height: 500px;
+  max-width: 300px;
+  margin-left: 50px;
+  margin-right: 0px !important;
+  position: relative;
   padding: 10px;
   background-color: #fddfa7;
-  width: 100%;
-  margin: 0px !important; }
+  overflow: auto; }
+
+.moreVideos::-webkit-scrollbar {
+  width: 5px;
+  height: 5px; }
+
+.moreVideos::-webkit-scrollbar-thumb {
+  background: #f8cd7d; }
+
+.moreVideos::-webkit-scrollbar-track {
+  background: #fddfa7; }
+
+.rec-container {
+  position: fixed;
+  right: 0;
+  z-index: 100; }
 
 body {
   background-color: #f5f5f5 !important; }
@@ -299,8 +318,10 @@ body {
 
 .logo-font {
   font-family: "FORTE";
-  font-size: 32px;
-  color: #fff; }
+  font-size: 28px;
+  color: #fff;
+  margin-top: 0px;
+  margin-right: 0px; }
 
 .custom-icon {
   width: 22px; }
@@ -350,7 +371,7 @@ body {
   padding-bottom: 0px !important;
   background-color: #fff;
   border-bottom: 1px solid #ff2d11;
-  max-height: 42px !important; }
+  min-height: 42px !important; }
 
 .navbar-guest-custom {
   min-height: 48px;
