--- a/src/assets/stylesheets/recomendedVideos.scss
+++ b/src/assets/stylesheets/recomendedVideos.scss
@@ -1,15 +1,53 @@
 .panel{
-    max-width: 500px;
-    min-height: 50px;
+    // position: absolute;
+    width: 50px;
+    min-height: 300px;
     background-color: rgb(248, 205, 125);
-    border-radius: 90px 90px 0px 0px;
-    -moz-border-radius: 90px 90px 0px 0px;
-    -webkit-border-radius: 90px 90px 0px 0px;
+    border-radius: 90px 0px 0px 90px;
+    -moz-border-radius: 90px 0px 0px 90px;
+    -webkit-border-radius: 90px 0px 0px 90px;
     border: 0px solid #000000;
 }
+
 .moreVideos{
+    max-height: 500px;
+    max-width: 300px;
+    margin-left: 50px;
+    margin-right: 0px !important;
+    position: relative;
     padding: 10px;
     background-color: rgb(253, 223, 167);
-    width: 100%;
-    margin: 0px !important;
+    // width: 100%;
+    // margin: 0px !important;
+
+    // height: 600px;
+    overflow: auto;
+    // width: 100px;
+}
+
+.moreVideos::-webkit-scrollbar {
+    width:  5px;
+    height: 5px;
+}
+
+.moreVideos::-webkit-scrollbar-thumb {
+    background:  rgb(248, 205, 125);
+}
+
+.moreVideos::-webkit-scrollbar-track {
+    background: rgb(253, 223, 167);
+}
+
+.rec-container {
+    position: fixed;
+    right: 0;
+    z-index: 100;
+    // display: block;
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
+    // justify-content: flex-end;
+    // //align-items: flex-start;
+    //align-content: flex-start;
+    //height: 58px;
 }
