--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -14,8 +14,13 @@ body{
 }
 .logo-font{
     font-family: "FORTE";
-    font-size: 32px;
+    font-size: 28px;
     color: white;
+    margin-top: 0px;
+    margin-right: 0px;
+    // background: -webkit-linear-gradient(#eee, #333);
+    // -webkit-background-clip: text;
+    // -webkit-text-fill-color: transparent;
 }
 
 .custom-icon{
@@ -96,7 +101,7 @@ body{
     padding-bottom: 0px !important;
     background-color: #fff;
     border-bottom: 1px solid rgb(255, 45, 17); 
-    max-height: 42px !important;
+    min-height: 42px !important;
     // -webkit-transform: translate3d(0, 0, 0);
 }
 .navbar-guest-custom{
