change navbar style change favico

--- a/public/style.css
+++ b/public/style.css
@@ -319,9 +319,11 @@ body {
 .logo-font {
   font-family: "FORTE";
   font-size: 28px;
-  color: #fff;
   margin-top: 0px;
-  margin-right: 0px; }
+  margin-right: 0px;
+  background: -webkit-linear-gradient(#f60, #f30);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
 
 .custom-icon {
   width: 22px; }
@@ -329,7 +331,8 @@ body {
 .custom-icon-crown {
   width: 40px;
   margin-left: 16px;
-  margin-right: 16px; }
+  margin-right: 16px;
+  margin-bottom: 5px; }
 
 .custom-logo {
   max-width: 190px; }
@@ -370,7 +373,7 @@ body {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
   background-color: #fff;
-  border-bottom: 1px solid #ff2d11;
+  border-bottom: 1px solid #fff;
   min-height: 42px !important; }
 
 .navbar-guest-custom {
@@ -626,10 +629,10 @@ body {
   background-color: rgba(255, 255, 255, 0); }
 
 .navbar-background {
-  background: linear-gradient(to right, #f60, #f30); }
+  background: #fff; }
 
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 102, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }
 
 .transiton-component {
   background-color: rgba(255, 255, 255, 0) !important;
