--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -15,12 +15,12 @@ body{
 .logo-font{
     font-family: "FORTE";
     font-size: 28px;
-    color: white;
+    // color: white;
     margin-top: 0px;
     margin-right: 0px;
-    // background: -webkit-linear-gradient(#eee, #333);
-    // -webkit-background-clip: text;
-    // -webkit-text-fill-color: transparent;
+    background: -webkit-linear-gradient(rgb(255, 102, 0),  rgb(255, 51, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .custom-icon{
@@ -31,6 +31,7 @@ body{
     width: 40px;
     margin-left: 16px;
     margin-right: 16px;
+    margin-bottom: 5px;
 }
 
 .custom-logo{
@@ -100,7 +101,7 @@ body{
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     background-color: #fff;
-    border-bottom: 1px solid rgb(255, 45, 17); 
+    border-bottom: 1px solid white; 
     min-height: 42px !important;
     // -webkit-transform: translate3d(0, 0, 0);
 }
@@ -439,7 +440,8 @@ body{
 }
 
 .navbar-background{
-    background: linear-gradient(to right, rgb(255, 102, 0),  rgb(255, 51, 0));
+    // background: linear-gradient(to right, rgb(255, 102, 0),  rgb(255, 51, 0));
+    background: white;
 }
 
 // .custom-toggler .navbar-toggler {
@@ -447,7 +449,7 @@ body{
 // }
 
 .custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 102, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
 
 .transiton-component{
