--- a/public/style.css
+++ b/public/style.css
@@ -329,10 +329,7 @@ body {
   width: 22px; }
 
 .custom-icon-crown {
-  width: 40px;
-  margin-left: 16px;
-  margin-right: 16px;
-  margin-bottom: 5px; }
+  width: 40px; }
 
 .custom-logo {
   max-width: 190px; }
@@ -603,9 +600,10 @@ body {
 
 .channel-name-avatar {
   position: absolute;
+  margin-top: 10px;
   border-radius: 50% !important;
   border: 3px solid #fff !important;
-  height: 100%;
+  height: 80%;
   z-index: 10; }
 
 .channel-name-button {
@@ -630,6 +628,9 @@ body {
 
 .navbar-background {
   background: #fff; }
+
+.trend-menu-background {
+  background: linear-gradient(to right, #f60, #f30); }
 
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 102, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }
